@@ -37,22 +37,25 @@ library
   exposed-modules:     
     System.Environment.Parser.Internal
     System.Environment.Parser.Database
-  build-depends:       base        >= 4.6       &&   <4.7
+    System.Environment.Parser.Encoded
+  build-depends:       base              >= 4.6       &&   <4.7
 
                     -- Haskell Platform 2013.2.0.0
 
-                     , attoparsec  >= 0.10
-                     , mtl         >= 2.1
-                     , network     >= 2.4
-                     , text        >= 0.11
-                     , bytestring  >= 0.10
-                     , time        >= 1.4
-                     , containers  >= 0.4
-                     , old-locale  >= 1.0
+                     , attoparsec        >= 0.10
+                     , mtl               >= 2.1
+                     , network           >= 2.4
+                     , text              >= 0.11
+                     , bytestring        >= 0.10
+                     , time              >= 1.4
+                     , containers        >= 0.4
+                     , old-locale        >= 1.0
 
                     -- Others
 
-                     , http-types  >= 0.8
+                     , http-types        >= 0.8
+                     , base64-bytestring >= 1.0
+                     , base16-bytestring >= 0.1.1
 
   hs-source-dirs:      src
   default-language:    Haskell2010
