@@ -4,3 +4,4 @@
 	* src/System/Environment/Parser/Internal.hs: FromEnv parsers for numbers and string types
 	* src/System/Environment/Parser/Database.hs: Introduced DBConnection type with FromEnv instance
 	* src/System/Environment/Parser/Internal.hs: Introduced FromEnv for Data.Time types
+	* src/System/Environment/Parser/Encoded.hs: Added encoded bytestring types
